--- a/styles/main.css
+++ b/styles/main.css
@@ -8,3 +8,10 @@ h1{
     margin-top: 20px;
     margin-bottom: 10px;
 }
+.you-selected{
+    text-align: center;
+    font-weight: bold;
+    margin-top: 10px;
+    margin-bottom: 0px;
+    padding-bottom: 0px;
+}
