order is not working

--- a/styles/main.css
+++ b/styles/main.css
@@ -15,3 +15,8 @@ h1{
     margin-bottom: 0px;
     padding-bottom: 0px;
 }
+#btn-click-order{
+    border-radius: 15px;
+    margin-left: 10px;
+    text-align: center;
+}
